# test-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  db.py  enums.py  main.py  models.py  observability.py  pagination.py  schemas.py  secrets.py  seed.py  storage.py  transactions.py  webhook_security.py
app/api/: auth.py  dev.py  documents.py  events.py  webhooks.py
app/api/routes_impl/: auth.py  documents.py  webhooks.py
app/events/: notify.py
app/pipeline/: dag.py  handlers.py  messages.py  publisher.py  steps.py  transition.py
app/worker/: broker.py  main.py  reaper.py
docs/: ASSIGNMENT.md  DESIGN.md
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  helpers.py
tests/integration/: test_auth_leeway.py  test_fan_in.py  test_flow_and_tenancy.py  test_pagination.py  test_reaper.py  test_webhook_idempotency.py
tests/unit/: test_cursor.py  test_dag.py  test_event_broker.py  test_logging.py  test_status_derivation.py  test_webhook_signature.py
